# inherit

./: Cargo.toml  Justfile  README.md
.github/workflows/: ci.yml  publish.yml
inherit-cli/: Cargo.toml  README.md
inherit-cli/src/: cli.rs  config.rs  main.rs  prompt.rs  resolve.rs
inherit-cli/src/commands/: alias.rs  cache.rs  default.rs  generate.rs  mod.rs
inherit-cli/tests/: alias.rs  cache.rs  default.rs  generate.rs
inherit-cli/tests/common/: mod.rs
inherit-core/: Cargo.toml  README.md
inherit-core/examples/cargo-lib/: .inherignore  Cargo.toml  Inherit.toml
inherit-core/examples/cargo-lib/src/: lib.rs
inherit-core/src/: error.rs  ignore.rs  lib.rs  manifest.rs  pipeline.rs  scanner.rs
inherit-core/tests/: integration.rs
kissreplace/: Cargo.toml  README.md
kissreplace/src/: error.rs  lib.rs  replace.rs  scan.rs  strlike.rs  valid.rs
lazyget/: Cargo.toml  README.md
lazyget/src/: async_impl.rs  error.rs  lib.rs  sync_impl.rs
