[package]
name = "inherit-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for [`Inherit`](https://crates.io/crates/cargo-inherit)."
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
kissreplace = { path = "../kissreplace", version = "0.1.4" }
thiserror.workspace = true
serde = { version = "1.0", features = ["derive"] }
toml = "1.1.2"
ignore = "0.4"

[dev-dependencies]
tempfile = "3.8"
