[package]
name = "lazyget"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lazy artifact downloader with local caching"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
async = ["tokio"]

[dependencies]
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
tokio = { version = "1.35", features = ["fs", "rt", "process"], optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
dirs = "6.0.0"
